<resources>
    <string name="app_name">ImageViewer</string>

    <string name="action_settings">Settings</string>
    <string name="settings">Settings</string>
    <string name="settings_general">General</string>
    <string name="settings_about">About</string>

    <string name="developer">Developer</string>
    <string name="developer_summary" translatable="false">tianyu &lt;xdtianyu@gmail.com&gt;</string>
    
    <string name="license">Open source license </string>

    <string name="image_item_description" translatable="false">Image item</string>
    <string name="empty_dir">No image found!</string>

    <string name="lock_description">lock</string>
    <string name="check_description">check</string>

    <string name="network_share">Network share</string>
    <string name="windows_share">Add windows share</string>
    <string name="windows_share_server">Address:</string>
    <string name="windows_share_server_hint" translatable="false">192.168.1.100</string>
    <string name="windows_share_username">Username:</string>
    <string name="windows_share_username_hint" translatable="false">Administrator</string>
    <string name="windows_share_password">Password:</string>
    <string name="windows_share_password_hint" translatable="false">********</string>
    <string name="windows_share_folder">Folder:</string>
    <string name="windows_share_folder_hint" translatable="false">mnt</string>
    <string name="windows_share_summary">Connect windows share or samba server </string>
    <string name="server_address_cannot_be_empty">Server address cannot be empty</string>

    <string name="file_explorer_mode">File explorer mode</string>
    <string name="show_hiding_files">Show hiding files</string>
    <string name="add_share_activity">Add network shared folder</string>
    <string name="added_shared_folder">Added network shared folder</string>

    <string name="image_rotate_type">Image display</string>
    <string name="image_original">Original</string>
    <string name="image_fit_screen">Rotate image to fit screen</string>
    <string name="screen_fit_image">Rotate screen to fit image</string>
    <string name="action_save">Save</string>
    <string name="windows_share_name">Server name:</string>
    <string name="windows_share_name_hint">My samba share</string>
    <string name="remove">Remove</string>
    <string name="version">Version</string>
    <string name="action_detail">Detail</string>
    <string name="sort_name">File name</string>
    <string name="sort_last_modified">Last modify date</string>
    <string name="sort_content_length">Content length</string>

    <string name="sort_type">Sort type</string>
    <string name="local_sort_type">Local images</string>
    <string name="local_sort_reverse">Reverse local images</string>

    <string name="network_sort_type">Network images</string>
    <string name="network_sort_reverse">Reverse network images</string>
    <string name="detail_path">Path</string>
    <string name="detail_type">Type</string>
    <string name="detail_resolution">Resolution</string>
    <string name="detail_date">Date</string>
    <string name="detail_size">Size</string>
    <string name="effect">Effect</string>
    <string name="grid_effect">Grid effect</string>
    <string name="grid_effect_duration">Grid effect duration</string>
    <string name="viewpager_effect">Image slide effect</string>

    <string name="standard">Stardard</string>
    <string name="pulse">Pulse</string>
    <string name="rubber_band">Rubber band</string>
    <string name="shake">Shake</string>
    <string name="swing">Swing</string>
    <string name="wobble">Wobble</string>
    <string name="bounce">Bounce</string>
    <string name="tada">Tada</string>
    <string name="stand_up">Stand up</string>
    <string name="wave">Wave</string>
    <string name="roll_in">Roll in</string>
    <string name="bounce_in">Bounce in</string>
    <string name="bounce_in_down">Bounce in down</string>
    <string name="bounce_in_left">Bounce in left</string>
    <string name="bounce_in_right">Bounce in right</string>
    <string name="bounce_in_up">Bounce in up</string>
    <string name="fade_in">Fade in</string>
    <string name="fade_in_up">Fade in up</string>
    <string name="fade_in_down">Fade in down</string>
    <string name="fade_in_left">Fade in left</string>
    <string name="fade_in_right">Fade in right</string>
    <string name="flip_in_x">Flip in X</string>
    <string name="rotate_in">Rotate in</string>
    <string name="rotate_in_down_left">Rotate in down left</string>
    <string name="rotate_in_down_right">Rotate in down right</string>
    <string name="rotate_in_up_left">Rotate in up left</string>
    <string name="rotate_in_up_right">Rotate in up right</string>
    <string name="slide_in_down">Slide in down</string>
    <string name="zoom_in">Zoom in</string>
    <string name="zoom_in_down">Zoom in down</string>
    <string name="zoom_in_left">Zoom in left</string>
    <string name="zoom_in_right">Zoom in right</string>
    <string name="zoom_in_up">Zoom in up</string>
    <string name="quick">Quick</string>
    <string name="normal">Normal</string>
    <string name="slow">Slow</string>
    <string name="tablet">Tablet</string>
    <string name="cube_in">Cube in</string>
    <string name="cube_out">Cube out</string>
    <string name="flip_vertical">Flip vertical</string>
    <string name="flip_horizontal">Flip horizontal</string>
    <string name="stack">Stack</string>
    <string name="zoom_out">Zoom out</string>
    <string name="rotate_up">Rotate up</string>
    <string name="rotate_down">Rotate down</string>
    <string name="accordion">Accordion</string>
</resources>
