<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference
        android:title="@string/image_rotate_type"
        android:key="rotate_type"
        android:entries="@array/image_rotate_entries"
        android:entryValues="@array/image_rotate_values"
        android:defaultValue="2"/>
    <SwitchPreference
        android:title="@string/file_explorer_mode"
        android:key="file_explorer_mode"
        android:defaultValue="true"/>
    <SwitchPreference
        android:title="@string/show_hiding_files"
        android:key="show_hiding_files"
        android:defaultValue="false"/>
    <PreferenceCategory
        android:title="@string/sort_type">
        <ListPreference
            android:title="@string/local_sort_type"
            android:key="local_sort_type"
            android:entries="@array/image_sort_entries"
            android:entryValues="@array/image_sort_values"
            android:defaultValue="1"/>
        <SwitchPreference
            android:title="@string/local_sort_reverse"
            android:key="reverse_local_sort"
            android:defaultValue="false"/>
        <ListPreference
            android:title="@string/network_sort_type"
            android:key="network_sort_type"
            android:entries="@array/image_sort_entries"
            android:entryValues="@array/image_sort_values"
            android:defaultValue="0"/>
        <SwitchPreference
            android:title="@string/network_sort_reverse"
            android:key="reverse_network_sort"
            android:defaultValue="false"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/effect">
        <ListPreference
            android:title="@string/grid_effect"
            android:key="grid_effect"
            android:entries="@array/grid_effect_entries"
            android:entryValues="@array/grid_effect_values"
            android:defaultValue="STANDARD"/>
    </PreferenceCategory>
</PreferenceScreen>