<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:padding="20dp"
              android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            style="@style/static_text_style"
            android:text="@string/windows_share_name"/>
        <EditText
            style="@style/edit_text_style"
            android:id="@+id/windows_share_name"
            android:hint="@string/windows_share_name_hint"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            style="@style/static_text_style"
            android:text="@string/windows_share_server"/>
        <EditText
            style="@style/edit_text_style"
            android:id="@+id/windows_share_server"
            android:hint="@string/windows_share_server_hint"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            style="@style/static_text_style"
            android:text="@string/windows_share_username"/>
        <EditText
            style="@style/edit_text_style"
            android:id="@+id/windows_share_username"
            android:hint="@string/windows_share_username_hint"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            style="@style/static_text_style"
            android:text="@string/windows_share_password"/>
        <EditText
            android:id="@+id/windows_share_password"
            style="@style/edit_text_style"
            android:hint="@string/windows_share_password_hint"
            android:inputType="textPassword"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            style="@style/static_text_style"
            android:text="@string/windows_share_folder"/>
        <EditText
            style="@style/edit_text_style"
            android:id="@+id/windows_share_folder"
            android:hint="@string/windows_share_folder_hint"/>
    </LinearLayout>
</LinearLayout>