<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="10dp"
        android:scrollbars="vertical">

        <LinearLayout
            style="@style/detail_layout">

            <TextView
                style="@style/detail_text"
                android:text="@string/detail_path"/>

            <TextView
                android:id="@+id/detail_path"
                style="@style/detail_text_context"/>
        </LinearLayout>

        <LinearLayout
            style="@style/detail_layout">

            <TextView
                style="@style/detail_text"
                android:text="@string/detail_type"/>

            <TextView
                android:id="@+id/detail_type"
                style="@style/detail_text_context"/>
        </LinearLayout>

        <LinearLayout
            style="@style/detail_layout">

            <TextView
                style="@style/detail_text"
                android:text="@string/detail_size"/>

            <TextView
                android:id="@+id/detail_size"
                style="@style/detail_text_context"/>
        </LinearLayout>

        <LinearLayout
            style="@style/detail_layout">

            <TextView
                style="@style/detail_text"
                android:text="@string/detail_resolution"/>

            <TextView
                android:id="@+id/detail_resolution"
                style="@style/detail_text_context"/>
        </LinearLayout>

        <LinearLayout
            style="@style/detail_layout">

            <TextView
                style="@style/detail_text"
                android:text="@string/detail_date"/>

            <TextView
                android:id="@+id/detail_date"
                style="@style/detail_text_context"/>
        </LinearLayout>

    </LinearLayout>
</ScrollView>